# dino2disk

./: README.md  install-local.sh  meson.build
dako_installer/: dako-installer-processor.in  dako-installer.gresource.xml  dako-installer.in  main.py  meson.build  vanilla-installer-processor.in  vanilla-installer.in
dako_installer/core/: meson.build
dako_installer/core/locales/: __init__.py  africa.py  america.py  antarctica.py  arctic.py  asia.py  atlantic.py  australia.py  brazil.py  canada.py  chile.py  europe.py  indian.py  meson.build  mexico.py  pacific.py
dako_installer/defaults/: conn_check.py  disk.py  encryption.py  image.py  keyboard.py  language.py  meson.build  network.py  theme.py  timezone.py  welcome.py
dako_installer/gtk/: confirm.ui  default-disk.ui  default-encryption.ui  default-image.ui  default-welcome.ui  dialog-recovery.ui  done.ui  widget-partition.ui  window-cpu.ui  window-ram.ui  window-unsupported.ui  window.ui
dako_installer/layouts/: meson.build  preferences.py  yes_no.py
dako_installer/utils/: builder.py  meson.build  processor.py  recipe.py
dako_installer/views/: confirm.py  done.py  meson.build  progress.py  tour.py
dako_installer/windows/: dialog.py  dialog_output.py  dialog_poweroff.py  dialog_recovery.py  main_window.py  meson.build  window_cpu.py  window_ram.py  window_unsupported.py
data/: meson.build  org.projectbluefin.dakoinstaller.appdata.xml.in  org.projectbluefin.dakoinstaller.desktop.in  org.projectbluefin.dakoinstaller.gschema.xml  org.projectbluefin.dakoinstaller.policy  org.vanillaos.Installer.desktop.in
(+54 files in other folders)
